# inci-cas-builder

./: .gitignore  CLAUDE.md  README.md  car_info.py  car_tracker.py  config.yaml  dedup.py  display.py  pyproject.toml  requirements.txt  storage.py  vercel.json  web.py
api/: README.md  analyze.py  health.py
data/: cosing.csv  cosing_stub.csv  prospective_vendors.csv  raw_materials_master.csv  vendors.csv
docs/: PROJECT_STATE.md
lib/: schemas.py
scrapers/: __init__.py  autotempest.py  base.py  cargurus.py  cars_com.py  marketcheck.py
scripts/: convert_cosing.py
src/: cli.py  document.py  lookup.py  parser.py
templates/: base.html  detail.html  drops.html  index.html  info.html
tests/: test_api.py  test_document.py  test_e2e_document.py  test_e2e_lookup.py  test_lookup.py  test_parser.py
