[project]
name = "inci-cas-builder"
version = "0.1.0"
description = "Regulatory documentation tool that converts INCI panels into verified CAS reference documents."
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
